--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ a.out
 *.cpp
 test.py
 __pycache__/expression_tree_nodes.cpython-39.pyc
+.idea/modules.xml
+.idea/misc.xml
+.idea/inspectionProfiles/profiles_settings.xml
+*.iml
+*.xml
+.idea/vcs.xml
